[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2021"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

sp-core = { version = "4.1.0-dev", git = "https://github.com/librelois/substrate.git", branch = "duniter-monthly-2022-01" }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/librelois/substrate.git", branch = "duniter-monthly-2022-01" }
